:bug: Add missing option for delete grid layout on context-menu

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4761,6 +4761,10 @@ msgstr "Path"
 msgid "workspace.shape.menu.remove-flex"
 msgstr "Remove flex layout"
 
+#: src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.remove-grid"
+msgstr "Remove grid layout"
+
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs, src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.reset-overrides"
 msgstr "Reset overrides"
