--- a/frontend/translations/lv.po
+++ b/frontend/translations/lv.po
@@ -1051,7 +1051,7 @@ msgstr "E-pasts"
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-go-to"
-msgstr "Atvērt Twitter"
+msgstr "Atvērt X"
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-subtitle1"
@@ -1059,7 +1059,7 @@ msgstr "Šeit, lai palīdzētu ar tehniskajiem jautājumiem."
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-title"
-msgstr "Twitter atbalsta konts"
+msgstr "X atbalsta konts"
 
 #: src/app/main/ui/settings/password.cljs
 msgid "generic.error"
