--- a/frontend/translations/pl.po
+++ b/frontend/translations/pl.po
@@ -915,7 +915,7 @@ msgstr "Email"
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-go-to"
-msgstr "Przejdź do Twittera"
+msgstr "Przejdź do Xa"
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-subtitle1"
@@ -923,7 +923,7 @@ msgstr "Służymy pomocą w kwestiach technicznych."
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.twitter-title"
-msgstr "Konto wsparcia na Twitterze"
+msgstr "Konto wsparcia na Xze"
 
 #: src/app/main/ui/settings/password.cljs
 msgid "generic.error"
