--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -5148,7 +5148,7 @@ msgid "workspace.viewport.click-to-close-path"
 msgstr "Pulsar para cerrar la ruta"
 
 #, markdown
-msgid "workspace.top-bar.read-only"
+msgid "workspace.top-bar.view-only"
 msgstr "**Modo inspección** (View only)"
 
 msgid "workspace.top-bar.read-only.done"
