--- a/frontend/translations/pt_PT.po
+++ b/frontend/translations/pt_PT.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2024-02-12 19:02+0000\n"
+"PO-Revision-Date: 2024-04-20 23:07+0000\n"
 "Last-Translator: TheScientistPT <joao.ed.reis.gomes@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) <https://hosted.weblate.org/projects/"
 "penpot/frontend/pt_PT/>\n"
@@ -9,7 +9,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.5.1-dev\n"
+"X-Generator: Weblate 5.5-dev\n"
 
 #: src/app/main/ui/auth/register.cljs
 msgid "auth.already-have-account"
@@ -402,8 +402,8 @@ msgstr "Duplicar %s ficheiros"
 msgid "dashboard.empty-placeholder-drafts"
 msgstr ""
 "Os ficheiros adicionados às Bibliotecas irão aparecer aqui. Experimenta "
-"adicionar os teus ficheiros ou experimenta algumas das nossas [Bibliotecas "
-"e templates](https://penpot.app/libraries-templates.html)."
+"adicionar os teus ficheiros ou experimenta algumas das nossas [Bibliotecas e "
+"templates](https://penpot.app/libraries-templates.html)."
 
 msgid "dashboard.export-binary-multi"
 msgstr "Descarrega %s ficheiros Penpot (.penpot)"
